Fix PlaylistBrowser scroll w/ keyboard navigation.

BUG: 259791
FIXED-IN: 2.6